Added new api's for smoother user enrollment