@@ -5,16 +5,19 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import com.rudra.sessionbased_task_tracker.user.entity.User;
+import com.rudra.sessionbased_task_tracker.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 @Slf4j
@@ -26,6 +29,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     private static final String BEARER_PREFIX = "Bearer ";
 
     private final JwtTokenProvider jwtTokenProvider;
+    private final UserRepository userRepository;
 
     @Override
     protected void doFilterInternal(
@@ -44,12 +48,22 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
                 if (JwtTokenProvider.TOKEN_TYPE_ACCESS.equals(type)) {
                     Long userId = jwtTokenProvider.getUserIdFromClaims(claims);
+                    Optional<User> maybeUser = userRepository.findById(userId);
+
+                    if (maybeUser.isEmpty()) {
+                        log.debug("Rejected token for missing user {} on {} {}",
+                                userId, request.getMethod(), request.getRequestURI());
+                        filterChain.doFilter(request, response);
+                        return;
+                    }
+
+                    User user = maybeUser.get();
 
                     UsernamePasswordAuthenticationToken authentication =
                             new UsernamePasswordAuthenticationToken(
                                     userId,
                                     null,
-                                    Collections.emptyList());
+                                    List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name())));
                     authentication.setDetails(
                             new WebAuthenticationDetailsSource().buildDetails(request));
 
